# summer-school-main

./: CMakeLists.txt  Makefile  README.md
src/: Building.cpp  Building.h  BuildingList.h  Clay.cpp  Clay.h  ClayPit.cpp  ClayPit.h  Coin.cpp  Coin.h  Cursor.cpp  Cursor.h  Farm.cpp  Farm.h  FileManager.cpp  FileManager.h  Floor.cpp  Floor.h  Food.cpp  Food.h  Game.cpp  Game.h  GameCamera.cpp  GameCamera.h  GameMap.cpp  GameMap.h  GameRender.cpp  GameRender.h  Gold.cpp  Gold.h  House.cpp  House.h  IObject.h  IncludeObjects.h  InputController.cpp  InputController.h  IoCContainer.cpp  IoCContainer.h  LevelManager.cpp  LevelManager.h  MainBuilding.cpp  (+41 more)
src/maps/: 1-1  1-1 (1-я копия)  1-1 (full  1-1 (full backup)  1-1 (full)
src/scores/: 1-1
